networkpolicies/db-network-policy.yaml
#database should only accept connections from webapi:
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: database-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: webapi
